impr: only display required confidential info